--- a/examples/2disenio-maquetacion-css/reto/style.css
+++ b/examples/2disenio-maquetacion-css/reto/style.css
@@ -7,33 +7,36 @@
     padding: 0;
     box-sizing: border-box;
 };
-
 html, body{
     min-height: 100vh;
-    min-width: 100vw;
+    width: 100vw;
 }
 /* disponemos escios para el contenido en general con grid */
 body{
     display: grid;
     grid-template-rows: auto 1fr auto;
-
     background-color: rgb(237, 246, 255);
 }
 /*------------------ header content ------------------*/
 header{
     position: sticky;
     top: 0;
+    width: 100%;
     background-color: rgb(148, 233, 233);
 }
 header > nav {
+    /* posicionamiento del contenedor */
     display: grid;
     grid-template-columns: auto 1fr;
     grid-gap: 20px;
-
     padding: 5px 5%;
 }
+.header-nav >.header-logo{
+    height: 60px;
+    width: 60px;
+}
 .header-logo img{
-    width: 80px;
+    height: 100%;
 }
 .header-nav-list{
     height: 100%;
@@ -79,12 +82,11 @@ main > aside{
     /* posicion y dimenciones del contenedor */
     position: fixed;
     left: 0;
-    top: 75px;
+    top: 70px;
     width: 200px;
-    height: calc(100vh - 75px);
+    height: calc(100vh - 70px);
     /* stilos del contenedor */
     background-color: rgb(87, 176, 255);
-
     border-radius:0 15px 15px 0;
     /* alineacion del contenido */
     display: flex;
@@ -196,7 +198,7 @@ main > .content-page{
 }
 .presentation > .img-page{
     /* diemnciones del contenedor */
-    width: 40%;
+
     /* alineacion del contenido */
     display: flex;
     justify-content: center;
@@ -206,8 +208,8 @@ main > .content-page{
 .img-page > img{
     /* dimencion del contenido */
     background-color: rgba(0, 0, 0, 0.247);
-    height: 20rem;
-    width: 20rem;
+    height: auto;
+    width: 90%;
     border-radius: 50%;
 }
 article > .especializacion{
@@ -285,5 +287,179 @@ footer > p{
 }
 /* responsividad */
 @media (max-width: 760px){
+    /*--------- HEADER ---------*/
+    header{
+        background-color: rgb(2, 255, 171);
+        width: 100vw;
+        /* height: 15%; */
+    }
+    header > nav{
+        width: 100%;
+        padding: 1px 0 0 0;
+        /* height: 70px; */
+    }
+    nav .header-logo{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 60px;
+        width: 60px;
+    }
+    .header-logo > a{
+        /* posicionamiento del contenido */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* dimenciones del contenedor */
+        height: 70%;
+        width: 70%;
+        /* estilos del contenedor */
+        border-radius: 50%;
+    }
+    .header-logo img{
+        height: 100%;
+        border-radius: 50px;
+        padding: 5px;
+    }
+    .header-nav-list > ul{
+        width: 100%;
+        align-items: center;
+    }
+    /*-------- MAIN --------*/
+    main{
+        display: grid;
+        grid-template-rows: auto 1fr;
+        grid-template-columns: auto;
+        padding: 0;
+        /* max-width: 100vw; */
+    }
+    /* siedebar */
+    main > aside{                                                                                                       
+        /* posicion y dimenciones del contenedor */
+        position: sticky;
+        top: 60px;
+        /* top: 65px; */
+        padding: 0;
+        width: 100vw;
+        height: auto;
+        /* alineacion del contenido */
+        flex-direction: row;
+        /* estilos de contenedor */
+        border-radius: 0 0 7px 7px;
+    }
+    aside > p{
+        display: none;
+        /* dimenciones del contenedor */
+        width: 20%;
+        /* posicionamiento del contenido */
+        padding: 5px;
+        margin: 0;
+    }
+    aside > ul{
+        /* dimenciones del contenedor */
+        width: 100%; 
+        /* posicionamiento del contenido */
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        list-style: none;
+    }
+    aside li{
+        border-bottom: none;
+        padding: 0;
+        margin: 0
+    }
+    aside a{
+        /* dimenciones de contenedor */
+        width: 80px;
+        /* posicionamiento de contenido */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        /* stilos de transicion */
+        transition: opacity .5s linear, transform .5s ease;
+    }
+    aside a:hover{
+        border-radius: 4px;
+        transform: scale(.99);
+        padding: 0;
+        transition: .5s linear;
+        /* transition: none; */
+    }
+    /* contenido de la pagina */
+    main > .content-page{
+        margin-left: 0;
+        width:100vw;
+        /* padding: 0 1.2rem; */
+    }
+    .content-page > .presentation{
+        /* alineacion de contenido */
+        align-items: center;
+        flex-direction: column-reverse;
+    }
+    .presentation > p, .presentation > .img-page{
+        width: 100%;
+    }
+    .content-page > .especializacion{
+        /* alineacion de contenido */
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr 1fr 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+        padding: 0 0 15px 0;
+        width: 100%;
+        height: auto;
+    }
+    .especializacion > h3{
+        /* posisionamiento del contenido */
+        grid-row: 1/2;
+        grid-column: 1/2;
+        padding: 1rem 1rem 1rem 1rem;
+        /* estilos de texto */
+        font-family: "Roboto", sans-serif;
+        font-size: 25px;
+        font-weight: 700;
+        font-style: normal;
+        /* tamanio del contenedor */
+        /* width: 25em; */
+    }
+    .especializacion > .box{
+        justify-self: center;
+        /* dimenciones de los contenedores */
+        height: 20rem;
+        width: 15rem;
+        /* estilos de los contenedores */
+        background-color: rgba(0, 0, 0, 0.247);
+        border-radius: 25px;
     
+    }
+    .especializacion > .espe1{
+        /* posisionamiento del contenido */
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+    .especializacion > .espe2{
+        /* posisionamiento del contenido */
+        grid-row: 3/4;
+        grid-column: 1/2;
+    }
+    .especializacion > .espe3{
+        /* alineacion del contenido */
+        margin-bottom: 0;
+        /* posisionamiento del contenido */
+        grid-row: 4/5;
+        grid-column: 1/2;
+    }
+    .especializacion > .espe4{
+        /* posisionamiento del contenido */
+        grid-row: 5/6;
+        grid-column: 1/2;
+    }
+    /*---------- FOOTER ----------*/
+    footer{
+        margin: 0;
+        justify-content: center;
+        align-items: center;
+    }
 }
