--- a/examples/3estilos-avanzados-css/reto/style.css
+++ b/examples/3estilos-avanzados-css/reto/style.css
@@ -59,8 +59,6 @@ header > a{
     font-size: 1.3rem;
 }
 header > nav {
-    /* dimenciones */
-    width: 75%;
     /* alineaicon */
     display: flex;
     align-items: center;
@@ -113,6 +111,8 @@ main > h1{
     font-family: var(--color-dark-tertiary);
     text-transform: capitalize;
     font-size: 4.5rem;
+    /* sombra */
+    text-shadow: 10px 2px 5px var(--color-text-primary);
 }
 main > p {
     /* Alineación y estilos */
@@ -222,6 +222,22 @@ main > section[class="imagenes"], main > section[class="videos"]{
     background-color: var(--color-dark-secondary);
     border-radius: 1.1rem;
 }
+.box-videos > .box-video:after, .box-imagenes > .box-imagen:after{
+    content: "";
+    /* posicion */
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    /* dimencion */
+    width: 110%;
+    height: 4px;
+    /* estilos */
+    background-color: var(--color-text-primary);
+    border-radius: 50px;
+    box-shadow: 0px 5px 10px 2px  rgb(58, 56, 56);
+    /* alineacion */
+    transform: translate(-4.5%, 10px);
+}
 .box-imagen > img{
     /* diemncion */
     width: 80%;
@@ -243,7 +259,7 @@ main > section[class="imagenes"], main > section[class="videos"]{
     justify-content: center;
     /* estilos */
     font-family: var(--font-tertiary);
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 300;
     text-transform: uppercase;
     color: var(--color-text-secondary);
@@ -364,4 +380,83 @@ footer > p{
     font-family: var(--font-primary);
     font-size: .8rem;
     color: var(--color-text-secondary);
+}
+/* reponsive */
+@media (max-width: 760px){
+    /* header */
+    header > a{
+        /* alineaicon */
+        margin: 1rem 1rem 1rem 1rem;
+        /* estilos */
+        font-size: 1rem;
+    }
+    /* main */
+    main > h1{
+        /* alineacion */
+        /* estilos */
+        font-size: 3rem;
+    }
+    main > p{
+        /* alineacion */
+        padding: 0;
+        margin: 1rem 2rem;
+    }
+    main > section[class="carrusel"]{
+        /* alineacion */
+        margin: 0 1.5rem 2rem 1.5rem ;
+    }
+    .carrusel > .box{
+        /* dimencion */
+        width: 15%;
+        /* alineacion */
+        margin: .5rem;
+    }
+    /* imagenes y videos */
+    .imagenes > h2, main > section[class="videos"] > h2{
+        /* alineacion */
+        margin: 1rem 0;
+        /* estilos */
+        font-size: 2rem;
+    }
+    .box-imagen > p{
+        /* estilos */
+        font-size: 1rem;
+    }
+    .play > .img-play{
+        /* dimencion */
+        width: 20%;
+        height: 15%;
+        /* alineacion */
+        margin-right: .5rem;
+        /* estilos */
+        border-radius: 2px;
+    }
+    .play > p{
+        /* estilos */
+        font-size: 1rem;
+    }
+    @keyframes animation-play {
+        from{
+            transform: translateY(0px) rotate(90deg);
+        }
+        25%{
+            transform: translateY(2px) rotate(90deg);
+        }
+        50%{
+            transform: translateY(0px) rotate(90deg);
+        }
+        75%{
+            transform: translateY(-2px) rotate(90deg);
+        }
+        to{
+            transform: translateY(0px) rotate(90deg);
+        }
+    }
+    /* footer */
+    footer > p{
+        /* alineacion */
+        justify-content: center;
+        /* estilos */
+        font-size: .6rem;
+    }
 }
